--- a/src/app/components/email-jobs/email-jobs.component.html
+++ b/src/app/components/email-jobs/email-jobs.component.html
@@ -36,9 +36,13 @@
                   </mat-menu>
                 </div> 
                 <div class="table-container">
-                  <table mat-table [dataSource]="sentEmailsDataSource" class="table hoverEffect table-header table-bordered table-rounded">
+                  <table
+                  matSort 
+                  (matSortChange)="sortData($event, 'sent')"   
+                  mat-table 
+                  [dataSource]="sentEmailsDataSource" class="table hoverEffect table-header table-bordered table-rounded">
                     <ng-container matColumnDef="sent_on">
-                      <th mat-header-cell *matHeaderCellDef>
+                      <th mat-header-cell *matHeaderCellDef mat-sort-header="created_at">
                         <h6>Sent</h6>
                       </th>
                       <td mat-cell *matCellDef="let element let rowIndex = index">
@@ -76,21 +80,21 @@
                     </ng-container> -->
       
                     <ng-container matColumnDef="no_of_recipients">
-                      <th mat-header-cell *matHeaderCellDef>
+                      <th mat-header-cell *matHeaderCellDef mat-sort-header="no_of_recipients">
                         <h6>Recipients</h6>
                       </th>
                       <td mat-cell *matCellDef="let element let rowIndex = index">{{element.no_of_recipients}}</td>
                     </ng-container>
                     
                     <ng-container matColumnDef="seen">
-                      <th mat-header-cell *matHeaderCellDef>
+                      <th mat-header-cell *matHeaderCellDef mat-sort-header="seen">
                         <h6>Seen</h6>
                       </th>
                       <td mat-cell *matCellDef="let element let rowIndex = index">{{element.seen}}</td>
                     </ng-container>
 
                     <ng-container matColumnDef="unsubscribed">
-                      <th mat-header-cell *matHeaderCellDef>
+                      <th mat-header-cell *matHeaderCellDef mat-sort-header="unsubscribed">
                         <h6>Unsubscribed </h6>
                       </th>
                       <td mat-cell *matCellDef="let element let rowIndex = index">
@@ -146,9 +150,12 @@
                   <i class="fas fa-plus"></i> Add New Email Template
                 </button>
                 <div class="table-container">
-                  <table mat-table [dataSource]="emailTemplatesDataSource" class="table hoverEffect table-header table-bordered table-rounded">
+                  <table 
+                  matSort 
+                  (matSortChange)="sortData($event, 'e-templates')"  
+                  mat-table [dataSource]="emailTemplatesDataSource" class="table hoverEffect table-header table-bordered table-rounded">
                     <ng-container matColumnDef="created_on">
-                      <th mat-header-cell *matHeaderCellDef>
+                      <th mat-header-cell *matHeaderCellDef mat-sort-header="created_at">
                         <h6>Created On</h6>
                       </th>
                       <td mat-cell *matCellDef="let element let rowIndex = index">
@@ -173,14 +180,14 @@
                     </ng-container>
     
                     <ng-container matColumnDef="no_of_recipients">
-                      <th mat-header-cell *matHeaderCellDef>
+                      <th mat-header-cell *matHeaderCellDef mat-sort-header="no_of_recipients">
                         <h6>Recipients</h6>
                       </th>
                       <td mat-cell *matCellDef="let element let rowIndex = index">{{element.no_of_recipients}}</td>
                     </ng-container>
                     
                     <ng-container matColumnDef="no_of_times_used">
-                      <th mat-header-cell *matHeaderCellDef>
+                      <th mat-header-cell *matHeaderCellDef mat-sort-header="no_of_times_used">
                         <h6>Times Used</h6>
                       </th>
                       <td mat-cell *matCellDef="let element let rowIndex = index">{{element.no_of_times_used}}</td>
@@ -233,10 +240,13 @@
                   </mat-menu>
                 </div> 
                 <div class="table-container">
-                  <table mat-table [dataSource]="emailTemplatesMappedToCertificatesDataSource" class="table hoverEffect table-header table-bordered table-rounded">
+                  <table
+                  matSort 
+                  (matSortChange)="sortData($event, 'm-templates')"
+                  mat-table [dataSource]="emailTemplatesMappedToCertificatesDataSource" class="table hoverEffect table-header table-bordered table-rounded">
       
                     <ng-container matColumnDef="created_on">
-                      <th mat-header-cell *matHeaderCellDef>
+                      <th mat-header-cell *matHeaderCellDef mat-sort-header="created_at">
                         <h6>Created</h6>
                       </th>
                       <td mat-cell *matCellDef="let element let rowIndex = index">
@@ -261,14 +271,14 @@
                     </ng-container>
 
                     <ng-container matColumnDef="no_of_recipients">
-                      <th mat-header-cell *matHeaderCellDef>
+                      <th mat-header-cell *matHeaderCellDef  mat-sort-header="no_of_recipients">
                         <h6>Recipients</h6>
                       </th>
                       <td mat-cell *matCellDef="let element let rowIndex = index">{{element.no_of_recipients}}</td>
                     </ng-container>
                    
                     <ng-container matColumnDef="no_of_times_used">
-                      <th mat-header-cell *matHeaderCellDef>
+                      <th mat-header-cell *matHeaderCellDef mat-sort-header="no_of_times_used">
                         <h6>Times Used</h6>
                       </th>
                       <td mat-cell *matCellDef="let element let rowIndex = index">{{element.no_of_times_used}}</td>
